--- a/.settings/tasks.json
+++ b/.settings/tasks.json
@@ -33,7 +33,7 @@
 	"command": "Fsc.exe",
 	"isShellCommand": true,
 	"showOutput": "silent",
-	"args": ["wordSearch.fs", "--nologo", "--fullpaths"],
+	"args": ["config.fs", "wordlist.fs", "wordSearch.fs", "--nologo", "--fullpaths"],
 	"problemMatcher": [
 				"$msCompile",
 				"$lessCompile"
