Extract config. Add anagram.

--- a/WordSearch/WordSearch/WordSearch.fsproj
+++ b/WordSearch/WordSearch/WordSearch.fsproj
@@ -50,8 +50,10 @@
   <ItemGroup>
     <Compile Include="Config.fs" />
     <Compile Include="WordList.fs" />
+    <Compile Include="Trie.fs" />
     <Compile Include="WordSearch.fs" />
     <None Include="App.config" />
+    <Compile Include="Anagram.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
   <PropertyGroup>
